src/patterns/category-header/_category-header.scss
/*********************************/
/* BEGIN Pattern: category-header*/
/*********************************/


#category-header {
  background-image: url('../images/header_general.jpg');
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  margin-bottom: 0px;
  overflow: hidden;
}

#category-header h2 {
  background-color: $sta-blue-light-T;
  color: white;
  font-family: Georgia, serif;
  font-weight: normal;
  position: relative;
  padding: 20px 100%;
  margin: 0 -100%;
  text-shadow: 1px 1px 1px #444;
}

#category-header h2 a {
  color: white;
  text-decoration: none;
  font-weight: normal;
}

/* DISABLED, but saved here for historical reference.
 * This psuedo element creates the oblique angle after the 
 * heading and had a neat implementation.
 *
 *    #category-header h2:after {
 *        content: "";
 *        position: absolute;
 *        top: 0;
 *        right: -37px;
 *        width: 0;
 *        height: 0;
 *        border-top: 100px solid $sta-blue-light;
 *        border-top-color: $sta-blue-light-T;
 *        border-right: 37px solid transparent;
 *      }
 */

@media (max-width: 767px) {

  #category-header h2 {
    display: block;
    margin-right: -15px;
    padding-bottom: 30px;
  }

  #category-header h2:after{
    display: none;
  }

}


/* Color Accents */

.accent-blue-study {

  #category-header h2 {
    background-color: $sta-cyan-light-T;
  }

  #category-header h2:after {
    border-top-color: $sta-cyan-light;
    border-top-color: $sta-cyan-light-T;
  }

}

/*********************************/
/* END Pattern: category-header  */
/*********************************/

